title ion components added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 </head>
 <body>
-    
+    <ion-app>
+        <ion-content>
+            <ion-header>
+                <ion-toolbar color="primary">
+                    <ion-title>Budget Planner</ion-title>
+                </ion-toolbar>
+            </ion-header>
+        </ion-content>
+
+    </ion-app>
 </body>
 </html>
